# mqtt-python-client-bench

./: .gitignore  LICENSE  README.md  SCENARIOS.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml  tests.yml
certs/: ca.crt  server.crt
docs/: CEILING_PROBES.md
fixtures/: emqtt_bench_sample.txt
mosquitto/: mosquitto.conf
results/: aiomqtt-burst_recovery.json  aiomqtt-sub_callback_matching.json  aiomqtt-sub_exact_telemetry.json  aiomqtt-sub_hierarchy_telemetry.json  aiomqtt3-burst_recovery.json  aiomqtt3-duplex_gateway.json  aiomqtt3-e2e_integrity.json  aiomqtt3-pub_payload_sweep_qos0.json  aiomqtt3-pub_qos1_inflight.json  aiomqtt3-remaining_length_boundaries.json  aiomqtt3-rtt_capacity_qos1.json  aiomqtt3-sub_callback_matching.json  aiomqtt3-sub_exact_telemetry.json  aiomqtt3-sub_hierarchy_telemetry.json  amqtt-burst_recovery.json  amqtt-pub_qos1_inflight.json  amqtt-rtt_capacity_qos1.json  amqtt-sub_callback_matching.json  amqtt-sub_exact_telemetry.json  amqtt-sub_hierarchy_telemetry.json  awscrt-application_rtt_qos1.json  awscrt-burst_recovery.json  awscrt-pub_qos1_inflight.json  awscrt-rtt_capacity_qos1.json  awscrt-sub_callback_matching.json  awscrt-sub_exact_telemetry.json  awscrt-sub_hierarchy_telemetry.json  broker-ceiling-orch-smoke.json  client-ceiling-awscrt-smoke.json  client-ceiling-gmqtt-smoke.json  client-ceiling-paho-smoke.json  gmqtt-burst_recovery.json  gmqtt-pub_qos1_inflight.json  gmqtt-sub_callback_matching.json  gmqtt-sub_exact_telemetry.json  gmqtt-sub_hierarchy_telemetry.json  paho-burst_recovery.json  paho-fork-burst_recovery.json  paho-fork-duplex_gateway.json  paho-fork-pub_qos1_inflight.json  (+13 more)
scripts/: run_campaign_5h.sh
src/mqtt_client_bench/: __init__.py  broker.py  control.py  harness.py  loadgen.py  metrics.py  network.py  paths.py  report.py  result.schema.json  run.py  scenarios.py  sys_probe.py  telemetry.py  workloads.py
src/mqtt_client_bench/adapters/: __init__.py  aiomqtt.py  aiomqtt3.py  amqtt.py  async_bridge.py  awscrt.py  base.py  gmqtt.py  paho.py  paho_fork.py  registry.py  zmqtt.py
src/mqtt_client_bench/report_assets/: app.js  style.css
src/mqtt_client_bench/roles/: publisher.py  responder.py  rtt_initiator.py  subscriber.py
tests/: test_unit.py
