[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mqtt-client-bench"
version = "0.1.0"
description = "Comparative end-to-end benchmark for popular Python MQTT client libraries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "EPL-2.0 OR EDL-1.0" }
authors = [{ name = "MQTT client bench contributors" }]
dependencies = []

[project.optional-dependencies]
paho = ["paho-mqtt>=2.1.0"]
gmqtt = ["gmqtt>=0.7.0"]
aiomqtt = ["aiomqtt>=2.3.0,<3"]
# Separate env from aiomqtt v2 — same import name.
aiomqtt3 = ["aiomqtt==3.0.0a1"]
amqtt = ["amqtt>=0.11.0"]
awscrt = ["awscrt>=0.23.0"]
zmqtt = ["zmqtt>=0.0.5"]
all = [
  "mqtt-client-bench[paho]",
  "mqtt-client-bench[gmqtt]",
  "mqtt-client-bench[aiomqtt]",
  "mqtt-client-bench[amqtt]",
  "mqtt-client-bench[awscrt]",
]
# Experimental clients must be installed separately (aiomqtt3 conflicts with aiomqtt).
experimental-zmqtt = ["mqtt-client-bench[zmqtt]"]
experimental-aiomqtt3 = ["mqtt-client-bench[aiomqtt3]"]
dev = ["pytest>=7"]

[project.scripts]
mqtt-client-bench = "mqtt_client_bench.run:main"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/mosquitto",
  "/certs",
  "/fixtures",
  "/tests",
  "/docker-compose.yml",
  "/README.md",
  "/pyproject.toml",
  "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mqtt_client_bench"]
